--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -5,13 +5,11 @@ RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
         libpng-dev \
-	nginx git unzip \
-    && docker-php-ext-install -j$(nproc) iconv \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install -j$(nproc) gd
-
-# 配置composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer &&\
+	nginx git unzip &&\ 
+	docker-php-ext-install -j$(nproc) iconv &&\ 
+	docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ &&\ 
+	docker-php-ext-install -j$(nproc) gd &&\ 
+	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer &&\ 
 	chmod +x /usr/local/bin/composer &&\
 	composer -v
 
