--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
         libpng-dev \
-	nginx git unzip &&\ 
+	nginx git unzip openssl &&\ 
 	docker-php-ext-install -j$(nproc) iconv &&\ 
 	docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ &&\ 
 	docker-php-ext-install -j$(nproc) gd &&\ 
