--- a/laravel/Dockerfile
+++ b/laravel/Dockerfile
@@ -12,10 +12,11 @@ RUN apt-get update && apt-get install -y \
 	curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer &&\ 
 	chmod +x /usr/local/bin/composer &&\
 	composer -v &&\ 
-	wget https://raw.githubusercontent.com/curl/curl/master/lib/mk-ca-bundle.pl &&\ 
-	chmod 0777 mk-ca-bundle.pl &&\ 
-	./mk-ca-bundle.pl &&\ 
-	cp ca-bundle.crt /etc/ssl/certs/ca-certificates.crt -fr 
+	apt-get install --only-upgrade ca-certificates 
+#	wget https://raw.githubusercontent.com/curl/curl/master/lib/mk-ca-bundle.pl &&\ 
+#	chmod 0777 mk-ca-bundle.pl &&\ 
+#	./mk-ca-bundle.pl &&\ 
+#	cp ca-bundle.crt /etc/ssl/certs/ca-certificates.crt -fr 
 
 # 设置工作区
 WORKDIR /var/www/
